<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="login_activity">Login Activity</string>
    <string name="recycler_cardview">Recycler CardView</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="ui">UI</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="imageview">ImageView</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="willam_johnson">Willam Johnson</string>
    <string name="john_william_gmail_com">john.william@gmail.com</string>
    <string name="profileimage">ProfileImage</string>
    <string name="martha_harris">Martha Harris</string>


    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="cart">Cart</string>
    <string name="chicken_fried_rice">Chicken Fried Rice</string>
    <string name="special_chicken">Special Chicken</string>
    <string name="qty_1">QTY: 1</string>
    <string name="qty_2">QTY: 2</string>
    <string name="_34_50">₹ 220.50</string>
    <string name="icon">icon</string>
    <string name="item">Item</string>
    <string name="shipping_details">Shipping details</string>
    <string name="ship_to">Ship to :</string>
    <string name="united_states_county_445_rd">United States, County 445 Rd,\nMineola, TX, 75773\n(903) 569–3465</string>
    <string name="payment">Payment</string>
    <string name="logo">logo</string>
    <string name="master_card_5543">Master Card 5543 **** **** ****</string>
    <string name="paneer_tikka">Paneer Tikka</string>
    <string name="special_paneer">Special Paneer</string>
    <string name="_214_50">₹ 214.50</string>
    <string name="heart_icon">Heart Icon</string>
    <string name="save_icon">Save Icon</string>
    <string name="share_icon">Share Icon</string>
</resources>
