<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

        <include layout="@layout/toolbar_layout"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linear_layout1"
            android:layout_margin="16dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">
                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_activity"
                    />

                <Button
                    android:id="@+id/card_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recycler_cardview"
                    android:layout_marginTop="24dp"/>

                <Button
                    android:id="@+id/nav_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/navigation_drawer"
                    android:layout_marginTop="24dp"/>

                <Button
                    android:id="@+id/tab_nav_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_layout"
                    android:layout_marginTop="24dp"/>

                <Button
                    android:id="@+id/custom_ui_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui"
                    android:layout_marginTop="24dp"/>


        </LinearLayout>




</RelativeLayout>