<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardViewBackground"
    android:padding="@dimen/activity_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/activity_margin"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardCart"
        app:cardBackgroundColor="@color/colorWhite"
        app:contentPadding="16dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="85dp"
                android:layout_height="100dp"
                android:src="@drawable/chickenfriedrice"
                android:scaleType="centerCrop"
                android:contentDescription="@string/item" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/chicken_fried_rice"
                        android:textColor="@color/colorBlack"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_more_vert_black_24dp"
                        android:contentDescription="@string/icon" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/special_chicken"
                    android:layout_marginTop="4dp"
                    android:textSize="16sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/qty_1"
                        android:textColor="@color/colorBlack"
                        />
                    <android.support.v7.widget.AppCompatSpinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/_34_50"
                        android:textColor="@color/colorRaisedButton"
                        android:gravity="end"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardCart1"
        app:cardBackgroundColor="@color/colorWhite"
        android:layout_marginTop="2dp"
        app:contentPadding="16dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="85dp"
                android:layout_height="100dp"
                android:src="@drawable/paneertikka"
                android:scaleType="centerCrop"
                android:contentDescription="@string/item" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/paneer_tikka"
                        android:textColor="@color/colorBlack"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_more_vert_black_24dp"
                        android:contentDescription="@string/icon" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/special_paneer"
                    android:layout_marginTop="4dp"
                    android:textSize="16sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/qty_2"
                        android:textColor="@color/colorBlack"
                        />
                    <android.support.v7.widget.AppCompatSpinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/_214_50"
                        android:textColor="@color/colorRaisedButton"
                        android:gravity="end"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shipping_details"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/activity_margin"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shipCart"
        app:cardBackgroundColor="@color/colorWhite"
        app:contentPadding="16dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ship_to"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:text="@string/united_states_county_445_rd"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/activity_margin"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/payCart"
        app:cardBackgroundColor="@color/colorWhite"
        app:contentPadding="16dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp"
        android:layout_marginBottom="58dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/mastercard"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/master_card_5543"
                android:layout_marginTop="10dp"
                android:textSize="16dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>