<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardViewBackground"
    android:padding="16dp"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:src="@drawable/siqes"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardView"
        app:cardBackgroundColor="@color/colorWhite"
        app:contentPadding="16dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username_txtInputLayout"
                android:layout_marginTop="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginBottom="8dp">

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/username_txtfield"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:drawablePadding="4dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwd_txtInputLayout"
                android:layout_marginTop="8dp"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginBottom="8dp"
                app:passwordToggleEnabled="true">

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_txtfield"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="4dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/raised_btnLogin"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/login"
                android:background="@drawable/mybutton"
                style="@style/RaisedButton"/>

        </LinearLayout>



    </android.support.v7.widget.CardView>

</RelativeLayout>